Rename .icon to .footer-icon to avoid style overlap

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -69,7 +69,7 @@
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
-.deneb_footer .widget_wrapper .widget_contact .contact_info .single_info .icon {
+.deneb_footer .widget_wrapper .widget_contact .contact_info .single_info .footer-icons {
     font-size: 20px;
     color: red;
     margin-right: 10px;
